--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "create-papillon-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "tsx ./src/index.ts"
+    "dev": "tsx ./src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "bs": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
@@ -13,16 +16,18 @@
     "@clack/core": "^0.3.3",
     "@clack/prompts": "^0.7.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "chalk": "^5.3.0",
+    "chalk": "^4.1.2",
     "commander": "^11.1.0",
     "execa": "^8.0.1",
     "fs-extra": "^11.2.0",
     "gradient-string": "^2.0.2",
-    "ora": "^8.0.1",
+    "ora": "^3.4.0",
     "sort-package-json": "^2.7.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.11",
+    "@types/ora": "^3.2.0",
     "next": "^14.1.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
