--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
     "fs-extra": "^11.2.0",
     "gradient-string": "^2.0.2",
     "ora": "^3.4.0",
-    "sort-package-json": "^2.7.0"
+    "sort-package-json": "^2.7.0",
+    "type-fest": "^4.10.2"
   },
   "devDependencies": {
+    "@t3-oss/env-nextjs": "^0.8.0",
     "@types/fs-extra": "^11.0.4",
+    "@types/gradient-string": "^1.1.5",
     "@types/node": "^20.11.11",
     "@types/ora": "^3.2.0",
     "next": "^14.1.0",
+    "prisma": "^5.9.1",
+    "tailwindcss": "^3.4.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "zod": "^3.22.4"
